<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="@dimen/dp_240"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/input_tool_bar"
            app:titleTextColor="@color/white"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/h_s_a"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/coefficient_a"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/h_s_b"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/coefficient_b"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/h_s_c"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/coefficient_c"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:text="@string/h_s_d"
            android:layout_marginTop="@dimen/dp_12"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/coefficient_d"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:backgroundTint="@color/bg_button"
            android:textColor="@color/white"
            android:id="@+id/btn_result"
            android:text="@string/yes"
            android:layout_gravity="center"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</layout>